src/objects/Booking_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>SABookingDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Discount_Percentage__c</fullName>
        <label>Channel Partner Discount Percentage</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Discount__c</fullName>
        <label>Channel Partner Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Rate__c</fullName>
        <label>Channel Partner Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dp_Discount__c</fullName>
        <label>Dp Discount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Podium_No__c</fullName>
        <label>Flat/Podium No</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Booking Details (Global Charges)</relationshipLabel>
        <relationshipName>Booking_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InAugural_Discount__c</fullName>
        <label>InAugural Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InAugural_Percentage__c</fullName>
        <label>InAugural Percentage</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InAugural_Rate__c</fullName>
        <label>InAugural Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <formula>Amount__c - Net_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Discount__c</fullName>
        <formula>InAugural_Discount__c + Broker_Discount__c + Special_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Car_Parking__c</fullName>
        <label>No Of Car Parking</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <label>PlanCode</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Rate__c</fullName>
        <label>Rebate Rate</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Discount__c</fullName>
        <label>Special Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Percentage__c</fullName>
        <label>Special Percentage</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Rate__c</fullName>
        <label>Special Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_Of_Car__c</fullName>
        <label>Type Of Car</label>
        <picklist>
            <picklistValues>
                <fullName>Small Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>nRate__c</fullName>
        <label>Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Booking Details</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Booking Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>